--- a/index.html
+++ b/index.html
@@ -72,24 +72,24 @@
   <div class="floating-hearts" id="hearts"></div>
   <div class="card">
     <div id="step1">
-      <h1> Vậy là 3 tháng rùii</h1>
-      <p> Trước khi bắt đầuu... trả lời câu hỏi trước:>></p>
+      <h1>Vậy là 3 tháng rùii</h1>
+      <p>Trước khi bắt đầuu... trả lời câu hỏi trước:>></p>
       <p><b>Câu hỏi 1:</b> TThanh tỏ tình PNghi ngày máyy</p>
       <input id="q1" placeholder="Điền đáp án:>" />
       <br />
-      <button onclick="checkQ1()">Next</button>
+      <button onclick="checkQ1()">Tiếp theo</button>
     </div>
 
     <div id="step2" class="hidden">
       <p><b>Câu hỏi 2:</b> TThanh có iu PNghi hogg</p>
-      <input id="q2" placeholder="Type your answer" />
+      <input id="q2" placeholder=":>>" />
       <br />
-      <button onclick="checkQ2()">Next</button>
+      <button onclick="checkQ2()">Tiếp theo</button>
     </div>
 
     <div id="step3" class="hidden">
       <p class="heart">💗💗💗</p>
-      <p>One last thing I want to tell you…</p>
+      <p>Và TThanh muốn nói... </p>
       <p id="message"></p>
     </div>
   </div>
