--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
         document.getElementById('step2').classList.add('hidden');
         document.getElementById('step3').classList.remove('hidden');
         document.getElementById('message').innerText = 
-          "Cảm ơn em đã đến đây yêu anh:>> ❤️";
+          "Cảm ơn em đã đến đây yêu anh. Những ngày qua tuy chúng mình cũng có nhiều lần khó chịu cọc cằn nhưng cảm ơn em vì vẫn ở đây. Cảm ơn em đã bỏ qua những điểm sai của anh. Thời gian trôi qua cũng nhanh thật đáy:> chưa gì cx đã 3 tháng ròi. Chúc emm sau hnay ngày càng xinh đẹp, ngoan hiền, quản lý được cảm xúc của bản thân, học giỏi hơn và yêu anh hơn nhaa:Đ Anh yêu em - Tan Thanhh ❤️";
       } else {
         alert('sai gòi iu nhìu luôn mới đúm');
       }
